--- a/src/Components/AddToCart/AddToCart.css
+++ b/src/Components/AddToCart/AddToCart.css
@@ -21,19 +21,23 @@ p {
   color: #586F6B;
 }
 
+a {
+  text-decoration: none;
+}
+
 .overlay {
   position: fixed;
   top: 0;
   height: 100vh;
   width: 100vw;
-  background-color: rgba(235, 245, 238, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
 }
 
 .AddToCart {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #EBF5EE;
+  background-color: #FFFFFF;
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.2) 0px -2px 3px 0px;
 }
