--- a/src/Pages/Account/Account.scss
+++ b/src/Pages/Account/Account.scss
@@ -2,23 +2,27 @@
 @import "../../Styles/breakpoints";
 @import "../../Styles/colors";
 
-.Account{
-    margin: 1rem;
+.Account {
+  margin: 1rem;
 
-    section{
-        background-color: $White;
-        border-radius: 0.5rem;
-        padding: 1rem;
-        margin-bottom: 3rem;
-        
-        h1{
-            margin: 0;
-            line-height: 1rem;
-        }
+  @include desktop {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  section {
+    background-color: $White;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    margin-bottom: 3rem;
 
-        p{
-            margin-bottom: 0;
-        }
-        
+    h1 {
+      margin: 0;
+      line-height: 1rem;
     }
+
+    p {
+      margin-bottom: 0;
+    }
+  }
 }
