--- a/src/Pages/Account/Account.css
+++ b/src/Pages/Account/Account.css
@@ -28,6 +28,13 @@ a {
 .Account {
   margin: 1rem;
 }
+@media (min-width: 900px) {
+  .Account {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
 .Account section {
   background-color: #FFFFFF;
   border-radius: 0.5rem;
