--- a/src/Pages/Checkout/Checkout.css
+++ b/src/Pages/Checkout/Checkout.css
@@ -1,1 +1,62 @@
-/*# sourceMappingURL=Checkout.css.map */
+body {
+  color: #0B0A07;
+  padding: 0;
+}
+
+h1 {
+  font-size: 1rem;
+}
+
+h2 {
+  font-size: 1rem;
+}
+
+h3 {
+  font-size: 0.75rem;
+  color: #586F6B;
+}
+
+p {
+  font-size: 0.75rem;
+  color: #586F6B;
+}
+
+a {
+  text-decoration: none;
+}
+
+.YourOrder {
+  margin: 1.25rem;
+  background-color: #FFFFFF;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 2px 0px;
+  min-width: 225px;
+}
+@media (min-width: 900px) {
+  .YourOrder {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.YourOrder h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.YourOrder button {
+  width: 100%;
+  height: 2rem;
+  background-color: #34AD6C;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  font-weight: 600;
+  color: #FFFFFF;
+  border-radius: 0.25rem;
+  transition-property: box-shadow;
+  transition-duration: 0.25s;
+}
+.YourOrder button:hover, .YourOrder button:active {
+  box-shadow: rgba(23, 32, 38, 0.4) 2px 3px 3px 0px;
+}/*# sourceMappingURL=Checkout.css.map */
