--- a/src/Components/QRCode/MyQRCode.css
+++ b/src/Components/QRCode/MyQRCode.css
@@ -9,7 +9,8 @@
   cursor: pointer;
   transition-property: box-shadow;
   transition-duration: 0.25s;
+  width: 300px;
 }
 .QRCode img:hover, .QRCode img:active {
   box-shadow: rgba(23, 32, 38, 0.4) 2px 3px 3px 0px;
-}/*# sourceMappingURL=QRCode.css.map */
+}/*# sourceMappingURL=MyQRCode.css.map */
